# pico-transmitter

./: .gitignore  Cargo.toml  Embed.toml  elf.nix  flake.nix  test.pio
.cargo/: config.toml
src/: debounce.rs  lib.rs  main.rs
